<resources>
    <string name="app_name">Ava Reminders</string>
    <string name="notification_alert">Alert</string>
    <string name="notification_silent">Silent</string>

    <string name="developed_by">Developed by @lucns</string>
    <string name="format_version">Version %s</string>
    <string name="format_error_request">Rest code error: %d</string>

    <string name="about">About</string>
    <string name="about_description">This application aims only to clearly and directly display information about the student\'s commitments regarding the courses taken on the Moodle platform.</string>
    <string name="contact">Contact</string>
    <string name="contact_description">For contact, suggestions, or feedback, please access one of the platforms below:</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logging">Logging&#8230;</string>
    <string name="logout">Logout</string>
    <string name="not_request_again">Not request again on this device</string>
    <string name="empty">Empty.</string>
    <string name="wrong_credentials">Wrong credentials.</string>
    <string name="activities">Activities and Works</string>
    <string name="meetings">Synchronous meeting</string>
    <string name="student">Student</string>
    <string name="concluded">(Concluded)</string>

    <string name="loading">Loading&#8230;</string>
    <string name="try_again">Try Again</string>
    <string name="failure_try_again">Data obtention failure. Touch to try Again.</string>
    <string name="course">Course</string>
    <string name="courses">Courses</string>
    <string name="my_courses">My Courses</string>
    <string name="not_specified">Not specified</string>
    <string name="open_in">Open in:</string>
    <string name="close_in">Close in:</string>
    <string name="starts_at">Starts at:</string>
    <string name="ends_at">Ends at:</string>
    <string name="not_implemented">Not implemented.</string>
    <string name="close">Close</string>
    <string name="tasks">Tasks, Works and Final Tests</string>
    <string name="all_sorted_by_date">All sorted by date</string>

    <string name="error_no_internet">No internet connection!</string>
    <string name="error_no_response">No response! Code: %d</string>
    <string name="error_time_out">Time out by server!</string>
    <string name="error_app_internal">Internal app error!</string>
    <string name="error_bad_connection">Bad connection!</string>
    <string name="error_no_data">No data on stream!</string>
    <string name="error_bad_request">Bad request!</string>
    <string name="error_operation_not_authorized">Not authorized operation!</string>
    <string name="error_unauthenticated">Not unauthenticated!</string>
    <string name="error_not_found">Not found!</string>
    <string name="error_server">Server error! Retry operation.</string>
    <string name="error">Error!</string>

    <string name="connection_failure">Connection Failure!</string>
    <string name="connection_failure_description">Server offline or no connection. The system may be undergoing maintenance.</string>
</resources>